--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@nextui-org/react": "^2.4.8",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
     "@types/three": "^0.169.0",
+    "framer-motion": "^11.11.10",
     "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "react": "^18.3.1",
