--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/postprocessing": "^2.16.3",
     "@types/three": "^0.169.0",
     "framer-motion": "^11.11.10",
+    "gltfjsx": "^6.5.2",
     "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "react": "^18.3.1",
