--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "valtio": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
