--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "resend": "^4.0.1-alpha.0",
     "three": "^0.169.0",
     "valtio": "^2.1.1"
   },
