--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@nextui-org/react": "^2.4.8",
+    "@react-email/components": "0.0.28",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
@@ -20,9 +21,10 @@
     "gltfjsx": "^6.5.2",
     "lamina": "^1.1.23",
     "leva": "^0.9.35",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "resend": "^4.0.1-alpha.0",
     "three": "^0.169.0",
     "valtio": "^2.1.1"
@@ -39,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "react-email": "3.0.2",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   }
