--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leva": "^0.9.35",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6",
     "resend": "^4.0.1-alpha.0",
