--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gltfjsx": "^6.5.2",
     "lamina": "^1.1.23",
     "leva": "^0.9.35",
+    "postprocessing": "^6.36.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-helmet-async": "^2.0.5",
