--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
     "@types/three": "^0.169.0",
+    "@vercel/analytics": "^1.4.0",
     "framer-motion": "^11.11.11",
     "gltfjsx": "^6.5.2",
     "lamina": "^1.1.23",
