--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "postprocessing": "^6.36.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6",
