fix: upgrade deps

--- a/package.json
+++ b/package.json
@@ -11,42 +11,47 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@gsap/react": "^2.1.1",
-    "@nextui-org/react": "^2.4.8",
-    "@react-email/components": "0.0.28",
-    "@react-three/drei": "^9.115.0",
-    "@react-three/fiber": "^8.17.10",
-    "@react-three/postprocessing": "^2.16.3",
-    "@types/three": "^0.169.0",
-    "@vercel/analytics": "^1.4.0",
-    "framer-motion": "^11.11.11",
-    "gltfjsx": "^6.5.2",
-    "lamina": "^1.1.23",
-    "leva": "^0.9.35",
-    "postprocessing": "^6.36.4",
+    "@gsap/react": "^2.1.2",
+    "@heroui/accordion": "^2.2.26",
+    "@heroui/react": "2.8.7",
+    "@heroui/tabs": "^2.2.26",
+    "@react-email/components": "1.0.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/three": "^0.182.0",
+    "@vercel/analytics": "^1.6.1",
+    "framer-motion": "^12.26.2",
+    "gltfjsx": "^6.5.3",
+    "gsap": "^3.14.2",
+    "lamina": "^1.2.2",
+    "leva": "^0.10.1",
+    "maath": "^0.10.8",
+    "postprocessing": "^6.38.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-helmet-async": "^2.0.5",
-    "react-icons": "^5.3.0",
-    "react-toastify": "^10.0.6",
-    "resend": "^4.0.1-alpha.0",
-    "three": "^0.169.0",
-    "valtio": "^2.1.1"
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "resend": "^6.7.0",
+    "three": "^0.182.0",
+    "valtio": "^2.3.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "postcss": "^8.4.47",
-    "react-email": "3.0.2",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10"
+    "@eslint/js": "^9.39.2",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react-swc": "^4.2.2",
+    "eslint": "^9.39.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.26",
+    "globals": "^17.0.0",
+    "postcss": "^8.5.6",
+    "react-email": "5.2.5",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1"
   }
 }
